chore: ensure collapse button remains aligned with input in case of search errors

--- a/src/components/main-sidebar/styles/main-sidebar.module.css
+++ b/src/components/main-sidebar/styles/main-sidebar.module.css
@@ -13,7 +13,7 @@
 .searchRow {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     padding-block: 6px 2px;
     gap: 2px;
 }
