--- a/src/components/main-sidebar/styles/toggle-collapse-all-button.module.css
+++ b/src/components/main-sidebar/styles/toggle-collapse-all-button.module.css
@@ -3,6 +3,8 @@
     inline-size: 24px;
     block-size: 24px;
     margin-inline-start: 6px;
+    /* Input height is 28, so we need 24+2*2=28 */
+    margin-block: 2px;
     cursor: pointer;
     display: flex;
     align-items: center;
